engine-core: Adding tests to StorageDomainMapperTest to account for Maintenance (#593244)
https://bugzilla.redhat.com/593244

Adding a unit test to ensure that StorageDomainMapper handles
each of the storage domain statuses correctly.

Change-Id: I22f039b835a9644086b5aa0b152e50868c0aa826